# vulkan-c-minecraft

./: CMakeLists.txt  build.bat  build.sh
src/: camera.c  camera.h  commands.c  commands.h  depth_buffer.h  game.h  graphics_pipeline.c  image.c  image.h  main.c  renderer.c  renderer.h  swapchain.c  test.c  vk_types.h
src/geometries/: vertex.h
src/mesh/: chunk_mesh.c  chunk_mesh.h  mesh_pool.c  mesh_pool.h  mesher.c  mesher.h
src/renderer/: buffer.c  buffer.h  commands.c  commands.h  depth_buffer.c  depth_buffer.h  graphics_pipeline.c  graphics_pipeline.h  image.c  image.h  renderer.c  renderer.h  stb_image_impl.c  swapchain.c  swapchain.h  vk_types.h
src/shaders/: shader.frag  shader.vert
src/spvs/: crosshair_vert.spv  frag.spv  vert.spv
src/streamer/: streamer.c  streamer.h
src/world/: block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  chunk_map.c  chunk_map.h  chunk_pool.c  chunk_pool.h  world.c  world.h
